# secret-sharing-tool

./: .gitignore  Readme.md  decrypt.py  encrypt.py  generate-key.py  pyproject.toml
